docs-archive/apache-airflow-providers-jenkins/3.2.0/_sources/_api/airflow/providers/jenkins/hooks/jenkins/index.rst.txt
:py:mod:`airflow.providers.jenkins.hooks.jenkins`
=================================================

.. py:module:: airflow.providers.jenkins.hooks.jenkins


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.jenkins.hooks.jenkins.JenkinsHook




.. py:class:: JenkinsHook(conn_id = default_conn_name)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Hook to manage connection to jenkins server

   .. py:attribute:: conn_name_attr
      :annotation: = conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = jenkins_default

      

   .. py:attribute:: conn_type
      :annotation: = jenkins

      

   .. py:attribute:: hook_name
      :annotation: = Jenkins

      

   .. py:method:: get_jenkins_server()

      Get jenkins server


   .. py:method:: get_latest_build_number(job_name)


   .. py:method:: get_build_result(job_name, build_number)


   .. py:method:: get_build_building_state(job_name, build_number)



