docs-archive/apache-airflow-providers-jenkins/3.5.1/_sources/_api/airflow/providers/jenkins/hooks/jenkins/index.rst.txt
:py:mod:`airflow.providers.jenkins.hooks.jenkins`
=================================================

.. py:module:: airflow.providers.jenkins.hooks.jenkins


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.jenkins.hooks.jenkins.JenkinsHook




.. py:class:: JenkinsHook(conn_id = default_conn_name)


   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Hook to manage connection to jenkins server.

   .. py:attribute:: conn_name_attr
      :value: 'conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'jenkins_default'

      

   .. py:attribute:: conn_type
      :value: 'jenkins'

      

   .. py:attribute:: hook_name
      :value: 'Jenkins'

      

   .. py:method:: get_connection_form_widgets()
      :classmethod:

      Returns connection widgets to add to connection form.


   .. py:method:: get_ui_field_behaviour()
      :classmethod:

      Returns custom field behaviour.


   .. py:method:: get_jenkins_server()

      Get jenkins server.


   .. py:method:: get_latest_build_number(job_name)


   .. py:method:: get_build_result(job_name, build_number)


   .. py:method:: get_build_building_state(job_name, build_number)



